style: remove verticalAlign style from SVG element for cleaner markup

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -288,7 +288,7 @@
             const svgElement = svgDoc.documentElement;
 
             // Set attributes for styling or identification directly on the SVG element
-            svgElement.style.verticalAlign = "middle";
+            //svgElement.style.verticalAlign = "middle";
             svgElement.setAttribute("data-external-link-icon", "true"); // For easy selection later
 
             // Create a text node for the non-breaking space
