--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -118,12 +118,13 @@ body::after {
   position: fixed;
   bottom: 0;
   right: 0;
-  width: auto;
+  width: 33vw;
   height: auto;
-  background-image: url("/assets/images/visitenkarten hochkant.png");
+  background-image: url("/assets/images/visitenkarten-hochkant.png");
   background-repeat: no-repeat;
   background-size: contain;
-  pointer-events: none; /* So it doesn't block clicks */
-  z-index: -1; /* Behind content */
-  opacity: 0.8;
+  background-position: bottom right;
+  pointer-events: none;
+  z-index: -1;
+  opacity: 0.6;
 }
