--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -117,14 +117,14 @@ body::after {
   content: "";
   position: fixed;
   bottom: 0;
-  right: 0;
-  width: 33vw;
+  right: 200px;
+  width: 200px;
   height: auto;
   background-image: url("/assets/images/visitenkarten-hochkant.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom right;
   pointer-events: none;
-  z-index: -1;
+  z-index: 999;
   opacity: 0.6;
 }
