add background image

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -117,9 +117,9 @@ body::after {
   content: "";
   position: fixed;
   bottom: 0;
-  right: 200px;
+  right: 0;
   width: 200px;
-  height: auto;
+  height: 200px;
   background-image: url("/assets/images/visitenkarten-hochkant.png");
   background-repeat: no-repeat;
   background-size: contain;
