add background image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer has-background-inherit">
     <div class="container">
         {% if site.footer_menu %}
             <div class="columns is-multiline">
