add background image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,5 +13,11 @@
         {%- endif -%}
     </div>
 
-    <p class="content is-small has-text-centered">This site does not use cookies or analytic tools requiring you to consent or define allowed services. For our privacy notice, see the links above.</p>
+    <div class="container">
+        <div class="columns is-multiline">
+            <div class="column has-text-centered">
+                <p>This site does not use cookies or analytic tools requiring you to consent or define allowed services. For our privacy notice, see the links above.</p>
+            </div>
+        </div>
+    </div>
 </footer>
