add background image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="columns is-multiline">
-            <div class="column has-text-centered">
+            <div class="column has-text-centered is-small">
                 <p>This site does not use cookies or analytic tools requiring you to consent or define allowed services. For our privacy notice, see the links above.</p>
             </div>
         </div>
