add background image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer has-background-inherit">
     <div class="container">
         {%- if site.footer_menu -%}
-            <div class="columns is-multiline">
+            <div class="columns is-multiline is-centered">
                 {%- for item in site.data[site.footer_menu] -%}
                     <div class="column has-text-centered">
                         <div style="hyphens: manual;" class="has-text-centered">
@@ -14,8 +14,8 @@
     </div>
 
     <div class="container">
-        <div class="columns is-multiline">
-            <div class="has-text-centered is-small">
+        <div class="columns is-multiline is-centered">
+            <div class="column has-text-centered is-small">
                 <p class="has-text-centered is-small">This site does not use cookies or analytic tools requiring you to consent or define allowed services. For our privacy notice, see the links above.</p>
             </div>
         </div>
