--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -117,6 +117,11 @@ h6:hover .anchor-link {
   padding-bottom: 0 !important; // Or just 0 if not needed
 }
 
+.button {
+   white-space: normal;
+   overflow-wrap: break-word;
+}
+
 html::after {
   content: "";
   position: fixed;
