refactor: button word break

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -119,7 +119,7 @@ h6:hover .anchor-link {
 
 .button {
    white-space: normal;
-   overflow-wrap: normal;
+   overflow-wrap: break-word;
 }
 
 html::after {
